<resources>
    <string name="app_name">Popular Movies</string>

    <string name="activity_details">Movie Details</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_mostPopular">Most popular</string>
    <string name="action_sort_topRated">Top rated</string>
    <string name="action_favorite">Favorite</string>

    <string name="sample_title">Zootopia</string>
    <string name="sample_releaseDate">2015/01/01</string>
    <string name="sample_voteAverage">9.7</string>
    <string name="sample_author">Jane Doe</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
