...
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/poster_iv"
        app:layout_constraintTop_toBottomOf="@+id/poster_iv"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        tools:text="@string/lorem_ipsum" />

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/poster_iv"
        app:layout_constraintTop_toBottomOf="@id/plot_tv">

        <android.support.design.widget.TabLayout
            android:id="@+id/movie_details_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:tabMode="fixed" />

        <android.support.v4.view.ViewPager
...
